fix title word spacing

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -45,7 +45,7 @@
     font-size: 42px;
     text-transform: uppercase;
     text-align: center;
-    word-spacing: 100%;
+    word-spacing: 100vw;
     line-height: 55px;
     text-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 
